# cxx-project-template

./: .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cxx-project-template-clangd.code-workspace  cxx-project-template.code-workspace  test.json  test.ps1  vcpkg-configuration.json  vcpkg.json  vcpkg_export.ps1  vcpkg_install.ps1
cmake/: clang.cmake  copy_dll.cmake  get_runtime_dependencies.cmake  target_copy_files.cmake  target_copy_files_impl.cmake
compiler/: CMakeLists.txt
compiler/src/: compiler.cpp  compiler.h  compiler_info.h.in
presets/: build.json  configure.json  test.json
src/: common.hpp  main.cpp  test.cpp
vcpkg_overlay_triplets/vcpkg/scripts/toolchains/: clangcl.cmake  llvm-mingw.cmake
vcpkg_overlay_triplets/vcpkg/scripts/triplets/community/: x64-llvm-mingw-dynamic.cmake
vcpkg_toolchainFile/: llvm-mingw.cmake  toolchain-config.cmake  x64-llvm-mingw-dynamic.cmake
